recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:2: error: reassignment to val
	if (level=0)	{for (i <- 1 to 3) {avance(length);droite(120)}
                 ^